# simple-chat

./: Cargo.toml
src/: main.rs  user.rs
src/endpoints/: create_user.rs  mod.rs  users.rs
src/state/: auth.rs  mod.rs  user.rs
