[package]
name = "simple-chat"
version = "0.1.0"
edition = "2021"
authors = ["Juan Martinez Alonso"]

[dependencies]
axum = { version = "0.7.4", features = ["ws", "macros"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
